# owasp_scanner

./: Cargo.toml  README.md
crates/scanner-cli/: Cargo.toml
crates/scanner-cli/src/: main.rs
crates/scanner-core/: Cargo.toml
crates/scanner-core/src/: finding.rs  lib.rs  scanner.rs
crates/scanner-core/src/rules/: a01.rs  a02.rs  a03.rs  a04.rs  mod.rs
crates/scanner-report/: Cargo.toml
crates/scanner-report/src/: console.rs  html.rs  json.rs  lib.rs  sarif.rs
