[workspace]
members = [
    "crates/scanner-core",
    "crates/scanner-report",
    "crates/scanner-cli",
]
resolver = "2"

[workspace.package]
version     = "1.0.0"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/your-org/owasp-scanner"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
thiserror   = "1"
walkdir     = "2"
clap        = { version = "4", features = ["derive"] }
colored     = "2"
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1"
once_cell   = "1"
