[package]
name        = "scanner-report"
description = "Output formatters: Console, JSON, SARIF, HTML"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
scanner-core = { path = "../scanner-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
colored      = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
